--- a/src/pages/repo/repo.less
+++ b/src/pages/repo/repo.less
@@ -1,7 +1,8 @@
 .repository {
-  ul {
+  .list {
+    padding: 1rem;
+
     .item {
-      padding-top: 1rem;
       padding-bottom: 1rem;
     }
   }
