--- a/src/index.less
+++ b/src/index.less
@@ -12,13 +12,26 @@ a {
 }
 
 header {
+  @height: 2rem;
+
   position: fixed;
   top: 0;
   width: 100%;
-  height: 2rem;
+  height: @height;
   background-color: #24292e;
   color: aliceblue;
   text-align: center;
+
+  .right {
+    position: absolute;
+    right: 1rem;
+    height: 100%;
+
+    svg {
+      height: 100%;
+      line-height: @height;
+    }
+  }
 }
 
 main {
@@ -31,5 +44,5 @@ footer {
   bottom: 0;
   width: 100%;
   height: 2rem;
-  background-color: antiquewhite;
+  background-color: #81c5d1;
 }
