feat(find): add throttle func

--- a/src/pages/repo/repo.less
+++ b/src/pages/repo/repo.less
@@ -1,9 +1,17 @@
 .repository {
   .list {
-    padding: 1rem;
 
     .item {
       padding-bottom: 1rem;
+
+      dl {
+        dt {
+          .svg_book {
+            margin-right: 0.5rem;
+          }
+        }
+      }
     }
   }
+
 }
