--- a/src/components/routesBar/routesBar.less
+++ b/src/components/routesBar/routesBar.less
@@ -1,9 +1,9 @@
-.footBar {
+.routesBar {
   display: flex;
   width: 100%;
   height: 100%;
 
-  &_a {
+  a {
     display: block;
     width: calc(100% / 3);
     text-align: center;
