--- a/src/components/indexBar/indexBar.less
+++ b/src/components/indexBar/indexBar.less
@@ -4,14 +4,17 @@
 
   .left {
     margin-left: 1rem;
+    width: 5rem;
+    height: 2rem;
   }
 
   .center {
     flex-grow: 1;
-
   }
 
   .right {
     margin-right: 1rem;
+    width: 5rem;
+    height: 2rem;
   }
 }
