--- a/src/components/routesBar/routesBar.less
+++ b/src/components/routesBar/routesBar.less
@@ -1,12 +1,10 @@
 .routesBar {
   display: flex;
-  width: 100%;
-  height: 100%;
 
   a {
-    display: block;
     width: calc(100% / 3);
     text-align: center;
     color: #24292e;
+    line-height: 2rem;
   }
 }
