--- a/src/index.less
+++ b/src/index.less
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 ul {
@@ -21,6 +22,13 @@ header {
   background-color: #24292e;
   color: aliceblue;
   text-align: center;
+  vertical-align: middle;
+
+  .title {
+    display: inline-block;
+    height: 100%;
+    line-height: @height;
+  }
 
   .right {
     position: absolute;
