feat(page/error hooks): add error page. add hooks. add login and auth

--- a/src/components/userList/style.less
+++ b/src/components/userList/style.less
@@ -1,12 +1,10 @@
 .userList {
-  li {
-    dl {
-      dd {
-        .avatar {
-          width: 100px;
-          height: 100px;
-        }
-      }
-    }
+  & .avatar {
+    width: 100px;
+    height: 100px;
+  }
+
+  & li {
+    margin-bottom: 1rem;
   }
 }
