--- a/src/pages/find/style.less
+++ b/src/pages/find/style.less
@@ -15,13 +15,10 @@ header {
     .item {
       padding-bottom: 1rem;
 
-      dl {
-        dt {
-          .svg_book {
-            margin-right: 0.5rem;
-          }
-        }
-      }
     }
+  }
+
+  & .svg_book {
+    margin-right: 0.5rem;
   }
 }
